--- a/package.json
+++ b/package.json
@@ -8,18 +8,26 @@
     "build": "webpack --mode=development",
     "lint": "npx eslint ./src --ext .js,.jsx --fix",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
-
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  
   "devDependencies": {
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@storybook/addon-actions": "^6.5.13",
+    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.13",
+    "@storybook/addon-links": "^6.5.13",
+    "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/manager-webpack5": "^6.5.13",
+    "@storybook/react": "^6.5.13",
+    "@storybook/testing-library": "^0.0.13",
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.1",
     "eslint": "^8.27.0",
@@ -28,6 +36,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.7",
     "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^4.3.8",
@@ -37,7 +46,6 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
   },
-
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint",
